--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@
 
                 <div class="result__numbers">
                     <div class="result__number number--big">
-                        <div class="result__number-big">1 МЛН+</div>
+                        <div class="result__number-big"><span>1</span> МЛН+</div>
                         <div class="result__number-small">списав долгов на сумму свыше 1 000 000 000 рублей</div>
                     </div>
                     <div class="result__number">
-                        <div class="result__number-big">9 лет</div>
+                        <div class="result__number-big"><span class="inc">9</span> лет</div>
                         <div class="result__number-small">Наша компания существует <br/> на рынке</div>
                     </div>
                     <div class="result__number">
-                        <div class="result__number-big">1 000+</div>
+                        <div class="result__number-big"><span class="inc">1 000</span>+</div>
                         <div class="result__number-small">Дел о банкротстве успешно <br/> завершено за это время</div>
                     </div>
                 </div>
